--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: beige;
 }
 
 #navbar{
-    background-color:rgba(13, 221, 117, 0.5);
+    background-color:rgba(13, 221, 117, 0.9);
     font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -88,11 +91,53 @@ a:hover{
     object-position: 0px 1px;
 }
 
+#projects{
+    height: 100vh;
+    padding: 50px;
+    font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+h2{
+    text-align: center;
+    font-weight: 300;
+}
+
+.project{
+    padding: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+.project h3{
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    padding: 10px;
+}
+.project p{
+    padding: 10px;
+}
+
+.project-1{ 
+    width : 50vh;
+}
+
+.project img:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s;
+}
+
+
 #about{
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 50px;
+    height: 100vh;
     width: 100%;
     font-family: "Poppins", sans-serif;
   font-weight: 300;
